--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,10 +96,13 @@
       "unknown_code_verification_error": "Try a different code"
     },
     "symptom_onset": {
-      "when_did_your": "When did your symptoms start?",
-      "i_didnt_have": "I didn't have any symptoms",
+      "symptoms": "Symptoms",
+      "no_i_didnt_have": "No, I didn't have any symptoms",
+      "yes_i_did_have": "Yes, I did have symptoms",
       "symptom_onset_date": "Symptom Onset Date",
-      "select_date": "Select Date"
+      "select_date": "Select Date",
+      "did_you_have_symptoms": "Did you have any symptoms?",
+      "when_did_your_symptoms": "When did your symptoms begin?"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
