--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,7 +141,7 @@
     "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
     "check_for_exposures": "Check for exposures",
     "days_remaining": "There are {{daysOfQuarantineLeft}} days left in your recommended quarantine period.",
-    "summary": "Summary",
+    "exposure_report": "Exposure Report",
     "possible_exposures": "Possible Exposures",
     "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result.",
     "next_steps": "Next Steps",
@@ -170,7 +170,6 @@
     "how_does_this_work": "How does this work?",
     "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it is in close proximity to that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy.",
     "last_days": "Last 14 days",
-    "learn_more": "Learn More",
     "more_info": "Learn more about Exposure Notifications",
     "no_connectivity_message": "You are not connected to the internet!",
     "no_exposure_reports": "No Exposure Reports",
@@ -178,6 +177,7 @@
     "possible_exposure": "Possible Exposure",
     "protect_yourself_and_others": "Protect yourself and others in your community",
     "review_guidance_from_ha": "Review guidance from {{healthAuthorityName}}",
+    "review_health_guidance": "Review Health Guidance",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
     "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close proximity with later receives a positive test for COVID-19 and chooses to notify others."
