--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,12 +47,12 @@
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
     "infection_rate": "Infection rate",
     "new_cases": "New Cases",
+    "overall_risk_level_in": "Overall Risk Level in {{locationName}}",
     "past_days": "New cases per day, past {{days}} days",
     "per_100k": "per 100k",
     "positive_test_rate": "Positive test rate",
     "see_more": "See more",
     "source": "source: {{source}}",
-    "overall_risk_level_in": "Overall Risk Level in {{locationName}}",
     "trending_down": "Trending down",
     "trending_up": "Trending up"
   },
@@ -80,6 +80,9 @@
   },
   "export": {
     "code": "Code",
+    "code_input_body_bluetooth": "Enter your verification code",
+    "code_input_button_cancel": "Cancel",
+    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -92,18 +95,11 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
+      "invalid_code": "Try a different code",
       "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
-      "unknown_code_verification_error": "Try a different code"
-    },
-    "symptom_onset": {
-      "symptoms": "Symptoms",
-      "no_i_didnt_have": "No, I didn't have any symptoms",
-      "yes_i_did_have": "Yes, I did have symptoms",
-      "symptom_onset_date": "Symptom Onset Date",
-      "select_date": "Select Date",
-      "did_you_have_symptoms": "Did you have any symptoms?",
-      "when_did_your_symptoms": "When did your symptoms begin?"
+      "unknown_code_verification_error": "Try a different code",
+      "verification_code_used": "Verification code has already been used"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
@@ -128,6 +124,15 @@
         "no_token_for_existing_keys_title": "Attempt to submit existing keys"
       }
     },
+    "symptom_onset": {
+      "did_you_have_symptoms": "Did you have any symptoms?",
+      "no_i_didnt_have": "No, I didn't have any symptoms",
+      "select_date": "Select Date",
+      "symptom_onset_date": "Symptom Onset Date",
+      "symptoms": "Symptoms",
+      "when_did_your_symptoms": "When did your symptoms begin?",
+      "yes_i_did_have": "Yes, I did have symptoms"
+    },
     "verification_code_info": {
       "how_do_i_get_body": "Contact your health authority, {{healthAuthorityName}}.",
       "how_do_i_get_header": "How do I get a verification code?",
@@ -138,20 +143,15 @@
     }
   },
   "exposure_history": {
-    "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
     "check_for_exposures": "Check for exposures",
     "days_remaining": "There are {{daysOfQuarantineLeft}} days left in your recommended quarantine period.",
-    "exposure_report": "Exposure Report",
-    "possible_exposures": "Possible Exposures",
-    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result.",
-    "next_steps": "Next Steps",
     "exposure_detail": {
       "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
-      "next_steps": "Review health guidelines",
       "header": "Someone you were near has since tested positive for COVID-19.",
+      "next_steps": "Review health guidelines",
       "personalize_my_guidance": "Personalize my guidance",
       "quarantine": "Quarantine",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
@@ -159,6 +159,8 @@
       "wash_your_hands": "Wash your hands",
       "wear_a_mask": "Wear a mask"
     },
+    "exposure_report": "Exposure Report",
+    "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
     "health_guidelines": {
       "six_feet_apart": "Stay 6 feet apart",
       "stay_home": "Stay home when sick",
@@ -171,16 +173,36 @@
     "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it is in close proximity to that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy.",
     "last_days": "Last 14 days",
     "more_info": "Learn more about Exposure Notifications",
+    "next_steps": "Next Steps",
     "no_connectivity_message": "You are not connected to the internet!",
     "no_exposure_reports": "No Exposure Reports",
     "no_exposure_reports_over_past": "You haven't received any exposure reports over the past 14-days",
     "possible_exposure": "Possible Exposure",
+    "possible_exposures": "Possible Exposures",
     "protect_yourself_and_others": "Protect yourself and others in your community",
     "review_guidance_from_ha": "Review guidance from {{healthAuthorityName}}",
     "review_health_guidance": "Review Health Guidance",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
-    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close proximity with later receives a positive test for COVID-19 and chooses to notify others."
+    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close proximity with later receives a positive test for COVID-19 and chooses to notify others.",
+    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result."
+  },
+  "exposure_notification_alerts": {
+    "bluetooth_body": "To activate Exposure Notifications, you must first turn on Bluetooth in your Settings app.",
+    "bluetooth_title": "Enable Bluetooth",
+    "cant_check_for_exposures_body": "You must enable Exposure Notifications to check for exposures.",
+    "cant_check_for_exposures_button": "Enable Exposure Notifications",
+    "cant_check_for_exposures_title": "Can't Check for Exposures",
+    "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Notifications. {{applicationName}} does NOT track or keep a record of your location.",
+    "location_title": "Enable Location Services",
+    "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
+    "set_active_region_ios_title": "Set Active Region",
+    "share_exposure_information_ios_body": "Open the Settings app, then navigate to the Exposure Notifications settings for this app. Ensure 'Share Exposure Information' is turned on, then press 'Set As Active Region'.",
+    "share_exposure_information_ios_title": "Share Exposure Information",
+    "unhandled_error_body": "Something unexpected happened. Please close and reopen the app and try again.",
+    "unhandled_error_title": "Something Went Wrong",
+    "use_exposure_notifications_android_body": "To enable Exposure Notifications, go to the COVID-19 Exposure Notifications screen of your Settings app and enable 'Use Exposure Notifications'.",
+    "use_exposure_notifications_android_title": "Enable Exposure Notifications"
   },
   "exposure_scanning_status": {
     "fix_this": "Fix this",
@@ -189,9 +211,9 @@
     "your_device_is_scanning": "Your device is scanning for exposures and will continue to do so even if you close the app."
   },
   "home": {
-    "notifications_off": "Turn on notifications to get notified if you receive an exposure",
     "bluetooth_info_body": "Your phone detects other phones you spend time in close proximity with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
+      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
       "location_disabled_error_title": "Authorize in Settings",
       "location_header": "Location",
@@ -200,6 +222,7 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadUrl}}",
       "tracing_off_header": "Exposure Detection Off",
+      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
@@ -214,6 +237,7 @@
     "location_info_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. {{applicationName}} does NOT track or keep a record of your location.",
     "location_info_subheader": "{{applicationName}} does not track or keep a record of your location",
     "not_feeling_well": "Not feeling well?",
+    "notifications_off": "Turn on notifications to get notified if you receive an exposure",
     "open_healthcheck": "Open Healthcheck",
     "proximity_tracing_info_body_1": "If smartphones with the app installed are turned on, have Bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_info_body_2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
@@ -236,6 +260,7 @@
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
     "privacy_policy": "Privacy Policy",
+    "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
@@ -476,23 +501,6 @@
     "shortness_of_breath_or_difficulty_breathing": "Shortness of breath or difficulty breathing",
     "sore_throat": "Sore throat",
     "trouble_breathing": "Trouble breathing"
-  },
-  "exposure_notification_alerts": {
-    "use_exposure_notifications_android_title": "Enable Exposure Notifications",
-    "use_exposure_notifications_android_body": "To enable Exposure Notifications, go to the COVID-19 Exposure Notifications screen of your Settings app and enable 'Use Exposure Notifications'.",
-    "share_exposure_information_ios_title": "Share Exposure Information",
-    "share_exposure_information_ios_body": "Open the Settings app, then navigate to the Exposure Notifications settings for this app. Ensure 'Share Exposure Information' is turned on, then press 'Set As Active Region'.",
-    "set_active_region_ios_title": "Set Active Region",
-    "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
-    "bluetooth_title": "Enable Bluetooth",
-    "bluetooth_body": "To activate Exposure Notifications, you must first turn on Bluetooth in your Settings app.",
-    "unhandled_error_body": "Something unexpected happened. Please close and reopen the app and try again.",
-    "unhandled_error_title": "Something Went Wrong",
-    "cant_check_for_exposures_title": "Can't Check for Exposures",
-    "cant_check_for_exposures_body": "You must enable Exposure Notifications to check for exposures.",
-    "cant_check_for_exposures_button": "Enable Exposure Notifications",
-    "location_title": "Enable Location Services",
-    "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Notifications. {{applicationName}} does NOT track or keep a record of your location."
   },
   "verification_code_alerts": {
     "code_used_body": "The verification code provided has already been used.",
