--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,12 +6,12 @@
     "version": "Version:"
   },
   "callback": {
-    "fill_out_the_info": "Fill out the information below and a contact tracer from {{healthAuthorityName}} will get in touch.",
+    "fill_out_the_info": "Fill out the information below and a support member from the {{healthAuthorityName}} will get in touch.",
     "firstname": "First name",
     "lastname": "Last name",
     "phone_number_required": "Phone number (required)",
-    "request_a_call": "Request a call from a contact tracer",
-    "success_body": "Our contact tracers are working hard to keep you and your community safe. The {{healthAuthorityName}} has received your request for a call back. An expert will contact you within 24 hours.",
+    "request_a_call": "Request a call from our support team",
+    "success_body": "Our support team is working hard to keep you and your community safe. The {{healthAuthorityName}} has received your request for a call back. An expert will contact you within 24 hours.",
     "success_got_it": "Got it",
     "success_header": "You're in the queue"
   },
@@ -141,7 +141,7 @@
       "personalize_my_guidance": "Personalize my guidance",
       "schedule_callback": "Schedule a call with the {{healthAuthorityName}} to get help with testing and a successful quarantine.",
       "speak_with_contact_tracer": "Speak with a contact tracer",
-      "call_covid_support": "Call for COVID Support"
+      "speak_with_covid_support": "Speak with COVID Support"
     },
     "exposure_report": "Exposure Report",
     "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
