--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -165,7 +165,7 @@
     "review_health_guidance": "Review Health Guidance",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
-    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in clsoe contact with later uses the app to report a positive COVID-19 test.",
+    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close contact with later uses the app to report a positive COVID-19 test.",
     "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result."
   },
   "exposure_notification_alerts": {
